solved some overflow-issues

--- a/src/app/components/todoSection/todoSection.scss
+++ b/src/app/components/todoSection/todoSection.scss
@@ -8,6 +8,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-inline: 1px;
+  min-height: 83%;
 }
 
 .todo_item {
@@ -73,15 +75,17 @@
   gap: 6px;
 }
 
+.open_form_container {
+  padding: 2rem;
+  display: grid;
+  place-content: center;
+}
+
 .open_form {
   background: black;
   color: white;
   padding: 8px 3rem;
   border-radius: 999px;
-  position: absolute;
-  bottom: 30px;
-  left: 50%;
-  transform: translateX(-50%);
 
   &:hover {
     cursor: pointer;
@@ -108,4 +112,8 @@
   border-radius: 999px;
   padding-inline: 10px;
   color: white;
+}
+
+.hidden {
+  visibility: hidden;
 }
