--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,7 +104,7 @@ ul {
 
 html,
 body {
-  height: 100%;
+  min-height: 100%;
   font-family: var(--ff-base);
 }
 
